plugins {
  id 'java'
  id 'application'
  id 'org.jetbrains.kotlin.jvm' version '1.9.23'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'edu.metrostate'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

application {
  mainClass = 'edu.metrostate.dealership.MainKt'
  mainModule = 'edu.metrostate.dealership'
}

kotlin {
  jvmToolchain {
    languageVersion = JavaLanguageVersion.of(20) // or whatever minimum
  }
}

sourceSets {
  main {
    java {
      srcDirs += "src/main/kotlin"
    }
  }
}

javafx {
  version = '21'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation 'org.openjfx:javafx-controls:21'
  implementation 'org.openjfx:javafx-fxml:17.0.6'
  implementation 'com.google.code.gson:gson:2.12.1'
  implementation 'org.controlsfx:controlsfx:11.2.1'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.18.2'
  implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'

  testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
  testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
  useJUnitPlatform()
}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

  launcher {
    name = 'app'
    jvmArgs = [
            "--add-opens=javafx.graphics/javafx.stage=ALL-UNNAMED",
            "--add-opens=java.base/java.lang=ALL-UNNAMED"
    ]
  }
}
jlinkZip {
  group = 'distribution'
}